crates/compiler/test_syntax/tests/snapshots/pass/multiline_str_apply_in_parens_pat.expr.migrated.roc
u(
"""
"""(0,),): f
s
