crates/compiler/test_syntax/tests/snapshots/fail/wherem_implementsf.expr.roc
s:(s
wherem
implementsF)A
_
